2000-10-31  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (gtk_html_editor_command): do editor command
	(gtk_html_editor_event_command): new function, "emits"
	EditorAPI event
	(get_value_nick): helper function
	(load_keybindings): added KP_Enter
	(key_press_event): use event->string if e_utf8_from_gtk_event_key
	doesn't handle that, also use it only if length == 1 and string
	[0] < 0x80 as we don't want illegal UTF-8 sequences

	* htmltext.c (spell_error_destroy): commented out g_free 

	* htmlengine-edit-fontstyle.c: removed old unused code, this
	avoids warnings and this code still remain in older versions in
	CVS

	* htmlengine-edit-delete.c (html_engine_delete): use
	html_clueflow_new_from_flow

	* htmlengine-edit-insert.c (insert_para): use
	html_clueflow_new_from_flow

	* htmlclueflow.c (html_clueflow_new_from_flow): new function,
	creates new clueflow with same attributes (style, level,
	object_data)
	(html_clueflow_split): use html_clueflow_new_from_flow

	* htmlobject.c (html_object_copy_data_from_object): new function,
	copies data references from src object to dest one

	* gtkhtml.c (command): new command implemented

	* gtkhtml.h: added command indent-zero

	* gtkhtml.c (gtk_html_set_indent): renamed from gtk_html_indent
	(gtk_html_modify_indent_by_delta): new function

	* htmlclueflow.c (html_clueflow_modify_indentation_by_delta):
	renamed from old html_clueflow_indent

	* keybindingsrc.emacs: likewise

	* keybindingsrc.ms: changed to use ...-toggle

	* gtkhtml.h: renamed toggle bold/italic/underline/strikeout
	commands, added on/off bold/italic/underline/strikeout commands

2000-10-30  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit.c (html_engine_set_data_by_type): new function,
	sets data to objects with given type

	* htmlobject.c (html_object_set_data): new function for setting
	object data
	(html_object_get_data): new function for accessing object data

	* htmlobject.h: added object_data
